# keynergy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: github-actions-pr.yml
benches/: analysis.rs
doc/: crates.js  search-index.js  settings.html
doc/keynergy/: all.html  type.Pos.html
doc/keynergy/layout/: enum.LayoutError.html  fn.load_layout.html  index.html  sidebar-items.js
doc/src/keynergy/: layout.rs.html
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/keynergy/: all.html  index.html  sidebar-items.js
docs/keynergy/direction/: index.html  (+2 more)
docs/syn/: enum.Member.html  enum.ReturnType.html  enum.Visibility.html  struct.Abi.html  struct.BareFnArg.html  struct.ExprBinary.html  struct.ExprCall.html  struct.ExprCast.html  struct.ExprField.html  struct.ExprIndex.html  struct.ExprLit.html  struct.ExprParen.html  struct.ExprPath.html  struct.ExprUnary.html  struct.Field.html  struct.FieldsNamed.html  struct.FieldsUnnamed.html  struct.Index.html  struct.TypeArray.html  struct.TypeBareFn.html  struct.TypeGroup.html  struct.TypeImplTrait.html  struct.TypeInfer.html  struct.TypeMacro.html  struct.TypeNever.html  struct.TypeParen.html  struct.TypePath.html  struct.TypePtr.html  struct.TypeReference.html  struct.TypeSlice.html  struct.TypeTraitObject.html  struct.TypeTuple.html  struct.Variadic.html  struct.Variant.html  struct.VisCrate.html  struct.VisPublic.html  struct.VisRestricted.html
examples/: analysis.rs
src/: analysis.rs  direction.rs  finger.rs  fingers.rs  keyboard.rs  layout.rs  lib.rs  log.txt  pos.rs  textdata.rs
src/analysis/: .#tests.rs  analyzer.rs  combinedpos.rs  data.ket  error.rs  log.txt  metrics.rs  mod.rs  tests.rs
testdata/: semimak_jq.layout  semimak_jq.toml
(+180 files in other folders)
