[package]
name = "keynergy"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = {version = "1.0", features = ["derive"]}
ketos = {version="0.11", optional = true}
ketos_derive = {version="0.12", optional = true}
[dev-dependencies]
criterion = "0.3.5"

[features]
analysis = ["ketos", "ketos_derive"]

[package.metadata.docs.rs]

# Features to pass to Cargo (default: [])
features = ["analysis"]

