[package]
name = "keynergy"
version = "0.2.5"
edition = "2021"
authors = ["semilin"]
license = "GPL-3.0-or-later"
description = "An efficient and extensible layout analysis library"
readme = "README.md"
repository = "https://github.com/keynergy/keynergy"
keywords = ["optimization", "keyboards", "analysis"]

[dependencies]
toml = "0.5"
serde = {version = "1.0", features = ["derive"]}
ketos = {version="0.11", optional = true}
ketos_derive = {version="0.12", optional = true}

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "analysis"
harness = false

[features]
analysis = ["ketos", "ketos_derive"]

[package.metadata.docs.rs]
# Features to pass to Cargo (default: [])
features = ["analysis"]

